--- a/.github/workflows/debug_log.yml
+++ b/.github/workflows/debug_log.yml
@@ -1,7 +1,7 @@
 name: Debug log
 on: push
 jobs:
-  logs:
+  log:
     runs-on: ubuntu-latest
     steps:
       - run: echo "::debug:: This is a debug message"
